build/src/parser/parser.output
Terminals unused in grammar

   TK_CHOCO
   TK_STRING
   TK_BOOL
   TK_PARAM
   TK_ASSIGN
   TK_BEGIN
   TK_FROM
   TK_TO
   TK_UNION
   TK_INTERSEC


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 decl_opt_cst decl_opt_fncs system_or_func

    3 $@2: %empty

    4 program: $@2 choco_ctr

    5 system_or_func: TK_VARS decl_var_list ';' decl_opt_fncs decl_opt_goal decl_opt_ctrs
    6               | %empty

    7 choco_ctr: ctr_blk_list

    8 decl_opt_cst: %empty
    9             | TK_CONST
   10             | TK_CONST decl_cst_list ';'

   11 decl_cst_list: decl_cst
   12              | decl_cst_list ';' decl_cst

   13 decl_cst: TK_NEW_SYMBOL dimension equ_or_in expr
   14         | '*' TK_NEW_SYMBOL dimension equ_or_in expr

   15 equ_or_in: TK_EQU
   16          | TK_IN

   17 decl_var_list: decl_var
   18              | decl_var_list ';' decl_var
   19              | decl_var_list ',' decl_var

   20 decl_var: TK_NEW_SYMBOL dimension
   21         | TK_NEW_SYMBOL dimension TK_IN expr

   22 dimension: %empty
   23          | '[' expr ']'
   24          | '[' expr ']' '[' expr ']'

   25 interval: '[' expr ',' expr ']'

   26 decl_opt_fncs: decl_opt_fncs function
   27              | %empty

   28 $@3: %empty

   29 function: TK_FUNCTION $@3 TK_NEW_SYMBOL '(' fnc_inpt_list ')' fnc_code TK_RETURN expr semicolon_opt TK_END

   30 semicolon_opt: ';'
   31              | %empty

   32 fnc_inpt_list: fnc_inpt_list ',' fnc_input
   33              | fnc_input

   34 fnc_input: TK_NEW_SYMBOL dimension

   35 fnc_code: fnc_code fnc_assign ';'
   36         | %empty

   37 fnc_assign: TK_NEW_SYMBOL TK_EQU expr
   38           | TK_CONSTANT TK_EQU expr

   39 decl_opt_goal: %empty
   40              | TK_MINIMIZE expr semicolon_opt

   41 decl_opt_ctrs: %empty

   42 $@4: %empty

   43 decl_opt_ctrs: TK_CTRS $@4 ctr_blk_list TK_END
   44              | TK_CTRS semicolon_opt TK_END

   45 ctr_blk_list: ctr_blk_list1 semicolon_opt
   46             | ctr_blk_list2 semicolon_opt

   47 ctr_blk_list1: ctr_blk_list1 ';' ctr
   48              | ctr_blk_list2 semicolon_opt ctr
   49              | ctr

   50 ctr_blk_list2: ctr_blk_list1 ';' ctr_loop
   51              | ctr_blk_list2 semicolon_opt ctr_loop
   52              | ctr_loop

   53 $@5: %empty

   54 ctr_loop: TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list TK_END

   55 ctr: expr TK_EQU expr
   56    | expr TK_LEQ expr
   57    | expr TK_GEQ expr
   58    | expr '<' expr
   59    | expr '>' expr
   60    | expr TK_IN expr
   61    | TK_INTEGER '(' expr ')'
   62    | '(' ctr ')'
   63    | TK_NEW_SYMBOL TK_EQU expr

   64 expr: expr '+' expr
   65     | expr '*' expr
   66     | expr '-' expr
   67     | expr '/' expr
   68     | TK_MAX '(' expr_row ')'
   69     | TK_MIN '(' expr_row ')'

   70 $@6: %empty

   71 expr: TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   72     | TK_ATAN2 '(' expr ',' expr ')'
   73     | '-' expr
   74     | TK_ABS '(' expr ')'
   75     | TK_SIGN '(' expr ')'
   76     | expr '\''
   77     | TK_SQRT '(' expr ')'
   78     | TK_SQR '(' expr ')'
   79     | TK_POW '(' expr ',' expr ')'
   80     | TK_EXPO '(' expr ')'
   81     | TK_LOG '(' expr ')'
   82     | TK_COS '(' expr ')'
   83     | TK_SIN '(' expr ')'
   84     | TK_TAN '(' expr ')'
   85     | TK_ACOS '(' expr ')'
   86     | TK_ASIN '(' expr ')'
   87     | TK_ATAN '(' expr ')'
   88     | TK_COSH '(' expr ')'
   89     | TK_SINH '(' expr ')'
   90     | TK_TANH '(' expr ')'
   91     | TK_ACOSH '(' expr ')'
   92     | TK_ASINH '(' expr ')'
   93     | TK_ATANH '(' expr ')'
   94     | TK_FLOOR '(' expr ')'
   95     | TK_CEIL '(' expr ')'
   96     | TK_CHI '(' expr ',' expr ',' expr ')'
   97     | '+' expr
   98     | '(' expr ')'
   99     | '<' expr ',' expr '>'
  100     | expr '^' expr
  101     | expr '[' expr_index ']'
  102     | expr '(' expr_index ')'
  103     | expr '(' expr_index ',' expr_index ')'
  104     | '(' expr_row ')'
  105     | '(' expr_col ')'
  106     | TK_ENTITY
  107     | TK_ITERATOR
  108     | TK_EXPR_TMP_SYMBOL
  109     | TK_CONSTANT
  110     | TK_FUNC_SYMBOL '(' expr ')'
  111     | TK_FUNC_SYMBOL '(' expr_row ')'
  112     | TK_FLOAT
  113     | TK_PI
  114     | TK_INFINITY
  115     | TK_INT_CST
  116     | interval
  117     | TK_INF '(' expr ')'
  118     | TK_MID '(' expr ')'
  119     | TK_SUP '(' expr ')'
  120     | TK_DIFF '(' expr_row ')'
  121     | TK_UNARY_OP '(' expr ')'
  122     | TK_BINARY_OP '(' expr ',' expr ')'

  123 expr_row: expr_row ',' expr
  124         | expr ',' expr

  125 expr_col: expr_col ';' expr
  126         | expr ';' expr

  127 expr_index: ':'
  128           | expr
  129           | expr ':' expr


Terminals, with rules where they appear

$end (0) 0
'\'' (39) 76
'(' (40) 29 61 62 68 69 71 72 74 75 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94 95 96 98 102 103 104 105 110 111 117 118 119
    120 121 122
')' (41) 29 61 62 68 69 71 72 74 75 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94 95 96 98 102 103 104 105 110 111 117 118 119
    120 121 122
'*' (42) 14 65
'+' (43) 64 97
',' (44) 19 25 32 71 72 79 96 99 103 122 123 124
'-' (45) 66 73
'/' (47) 67
':' (58) 54 71 127 129
';' (59) 5 10 12 18 30 35 47 50 54 125 126
'<' (60) 58 99
'>' (62) 59 99
'[' (91) 23 24 25 101
']' (93) 23 24 25 101
'^' (94) 100
error (256)
TK_CHOCO (258)
TK_CONSTANT (259) 38 109
TK_NEW_SYMBOL (260) 13 14 20 21 29 34 37 54 63 71
TK_FUNC_SYMBOL (261) 110 111
TK_EXPR_TMP_SYMBOL (262) 108
TK_ENTITY (263) 106
TK_ITERATOR (264) 107
TK_UNARY_OP (265) 121
TK_BINARY_OP (266) 122
TK_STRING (267)
TK_INT_CST (268) 115
TK_FLOAT (269) 112
TK_PI (270) 113
TK_INFINITY (271) 114
TK_BOOL (272)
TK_PARAM (273)
TK_CONST (274) 9 10
TK_VARS (275) 5
TK_FUNCTION (276) 29
TK_DIFF (277) 120
TK_MIN (278) 69
TK_MAX (279) 68
TK_INF (280) 117
TK_MID (281) 118
TK_SUP (282) 119
TK_SIGN (283) 75
TK_ABS (284) 74
TK_SUM (285) 71
TK_SQRT (286) 77
TK_SQR (287) 78
TK_POW (288) 79
TK_EXPO (289) 80
TK_LOG (290) 81
TK_COS (291) 82
TK_SIN (292) 83
TK_TAN (293) 84
TK_ACOS (294) 85
TK_ASIN (295) 86
TK_ATAN (296) 87
TK_ATAN2 (297) 72
TK_COSH (298) 88
TK_SINH (299) 89
TK_TANH (300) 90
TK_ACOSH (301) 91
TK_ASINH (302) 92
TK_ATANH (303) 93
TK_FLOOR (304) 94
TK_CEIL (305) 95
TK_INTEGER (306) 61
TK_LEQ (307) 56
TK_GEQ (308) 57
TK_EQU (309) 15 37 38 54 55 63 71
TK_ASSIGN (310)
TK_CHI (311) 96
TK_BEGIN (312)
TK_END (313) 29 43 44 54
TK_FOR (314) 54
TK_FROM (315)
TK_TO (316)
TK_RETURN (317) 29
TK_CTRS (318) 43 44
TK_MINIMIZE (319) 40
TK_IN (320) 16 21 60
TK_UNION (321)
TK_INTERSEC (322)


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
program (84)
    on left: 2 4, on right: 0
$@1 (85)
    on left: 1, on right: 2
$@2 (86)
    on left: 3, on right: 4
system_or_func (87)
    on left: 5 6, on right: 2
choco_ctr (88)
    on left: 7, on right: 4
decl_opt_cst (89)
    on left: 8 9 10, on right: 2
decl_cst_list (90)
    on left: 11 12, on right: 10 12
decl_cst (91)
    on left: 13 14, on right: 11 12
equ_or_in (92)
    on left: 15 16, on right: 13 14
decl_var_list (93)
    on left: 17 18 19, on right: 5 18 19
decl_var (94)
    on left: 20 21, on right: 17 18 19
dimension (95)
    on left: 22 23 24, on right: 13 14 20 21 34
interval (96)
    on left: 25, on right: 116
decl_opt_fncs (97)
    on left: 26 27, on right: 2 5 26
function (98)
    on left: 29, on right: 26
$@3 (99)
    on left: 28, on right: 29
semicolon_opt (100)
    on left: 30 31, on right: 29 40 44 45 46 48 51
fnc_inpt_list (101)
    on left: 32 33, on right: 29 32
fnc_input (102)
    on left: 34, on right: 32 33
fnc_code (103)
    on left: 35 36, on right: 29 35
fnc_assign (104)
    on left: 37 38, on right: 35
decl_opt_goal (105)
    on left: 39 40, on right: 5
decl_opt_ctrs (106)
    on left: 41 43 44, on right: 5
$@4 (107)
    on left: 42, on right: 43
ctr_blk_list (108)
    on left: 45 46, on right: 7 43 54
ctr_blk_list1 (109)
    on left: 47 48 49, on right: 45 47 50
ctr_blk_list2 (110)
    on left: 50 51 52, on right: 46 48 51
ctr_loop (111)
    on left: 54, on right: 50 51 52
$@5 (112)
    on left: 53, on right: 54
ctr (113)
    on left: 55 56 57 58 59 60 61 62 63, on right: 47 48 49 62
expr (114)
    on left: 64 65 66 67 68 69 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
    119 120 121 122, on right: 13 14 21 23 24 25 29 37 38 40 54 55
    56 57 58 59 60 61 63 64 65 66 67 71 72 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    102 103 110 117 118 119 121 122 123 124 125 126 128 129
$@6 (115)
    on left: 70, on right: 71
expr_row (116)
    on left: 123 124, on right: 68 69 104 111 120 123
expr_col (117)
    on left: 125 126, on right: 105 125
expr_index (118)
    on left: 127 128 129, on right: 101 102 103


State 0

    0 $accept: . program $end
    1 $@1: . %empty  [$end, TK_CONST, TK_VARS, TK_FUNCTION]
    2 program: . $@1 decl_opt_cst decl_opt_fncs system_or_func
    3 $@2: . %empty  [TK_CONSTANT, TK_NEW_SYMBOL, TK_FUNC_SYMBOL, TK_EXPR_TMP_SYMBOL, TK_ENTITY, TK_ITERATOR, TK_UNARY_OP, TK_BINARY_OP, TK_INT_CST, TK_FLOAT, TK_PI, TK_INFINITY, TK_DIFF, TK_MIN, TK_MAX, TK_INF, TK_MID, TK_SUP, TK_SIGN, TK_ABS, TK_SUM, TK_SQRT, TK_SQR, TK_POW, TK_EXPO, TK_LOG, TK_COS, TK_SIN, TK_TAN, TK_ACOS, TK_ASIN, TK_ATAN, TK_ATAN2, TK_COSH, TK_SINH, TK_TANH, TK_ACOSH, TK_ASINH, TK_ATANH, TK_FLOOR, TK_CEIL, TK_INTEGER, TK_CHI, TK_FOR, '<', '+', '-', '[', '(']
    4 program: . $@2 choco_ctr

    $end         reduce using rule 1 ($@1)
    TK_CONST     reduce using rule 1 ($@1)
    TK_VARS      reduce using rule 1 ($@1)
    TK_FUNCTION  reduce using rule 1 ($@1)
    $default     reduce using rule 3 ($@2)

    program  go to state 1
    $@1      go to state 2
    $@2      go to state 3


State 1

    0 $accept: program . $end

    $end  shift, and go to state 4


State 2

    2 program: $@1 . decl_opt_cst decl_opt_fncs system_or_func
    8 decl_opt_cst: . %empty  [$end, TK_VARS, TK_FUNCTION]
    9             | . TK_CONST
   10             | . TK_CONST decl_cst_list ';'

    TK_CONST  shift, and go to state 5

    $default  reduce using rule 8 (decl_opt_cst)

    decl_opt_cst  go to state 6


State 3

    4 program: $@2 . choco_ctr
    7 choco_ctr: . ctr_blk_list
   25 interval: . '[' expr ',' expr ']'
   45 ctr_blk_list: . ctr_blk_list1 semicolon_opt
   46             | . ctr_blk_list2 semicolon_opt
   47 ctr_blk_list1: . ctr_blk_list1 ';' ctr
   48              | . ctr_blk_list2 semicolon_opt ctr
   49              | . ctr
   50 ctr_blk_list2: . ctr_blk_list1 ';' ctr_loop
   51              | . ctr_blk_list2 semicolon_opt ctr_loop
   52              | . ctr_loop
   54 ctr_loop: . TK_FOR TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list TK_END
   55 ctr: . expr TK_EQU expr
   56    | . expr TK_LEQ expr
   57    | . expr TK_GEQ expr
   58    | . expr '<' expr
   59    | . expr '>' expr
   60    | . expr TK_IN expr
   61    | . TK_INTEGER '(' expr ')'
   62    | . '(' ctr ')'
   63    | . TK_NEW_SYMBOL TK_EQU expr
   64 expr: . expr '+' expr
   65     | . expr '*' expr
   66     | . expr '-' expr
   67     | . expr '/' expr
   68     | . TK_MAX '(' expr_row ')'
   69     | . TK_MIN '(' expr_row ')'
   71     | . TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   72     | . TK_ATAN2 '(' expr ',' expr ')'
   73     | . '-' expr
   74     | . TK_ABS '(' expr ')'
   75     | . TK_SIGN '(' expr ')'
   76     | . expr '\''
   77     | . TK_SQRT '(' expr ')'
   78     | . TK_SQR '(' expr ')'
   79     | . TK_POW '(' expr ',' expr ')'
   80     | . TK_EXPO '(' expr ')'
   81     | . TK_LOG '(' expr ')'
   82     | . TK_COS '(' expr ')'
   83     | . TK_SIN '(' expr ')'
   84     | . TK_TAN '(' expr ')'
   85     | . TK_ACOS '(' expr ')'
   86     | . TK_ASIN '(' expr ')'
   87     | . TK_ATAN '(' expr ')'
   88     | . TK_COSH '(' expr ')'
   89     | . TK_SINH '(' expr ')'
   90     | . TK_TANH '(' expr ')'
   91     | . TK_ACOSH '(' expr ')'
   92     | . TK_ASINH '(' expr ')'
   93     | . TK_ATANH '(' expr ')'
   94     | . TK_FLOOR '(' expr ')'
   95     | . TK_CEIL '(' expr ')'
   96     | . TK_CHI '(' expr ',' expr ',' expr ')'
   97     | . '+' expr
   98     | . '(' expr ')'
   99     | . '<' expr ',' expr '>'
  100     | . expr '^' expr
  101     | . expr '[' expr_index ']'
  102     | . expr '(' expr_index ')'
  103     | . expr '(' expr_index ',' expr_index ')'
  104     | . '(' expr_row ')'
  105     | . '(' expr_col ')'
  106     | . TK_ENTITY
  107     | . TK_ITERATOR
  108     | . TK_EXPR_TMP_SYMBOL
  109     | . TK_CONSTANT
  110     | . TK_FUNC_SYMBOL '(' expr ')'
  111     | . TK_FUNC_SYMBOL '(' expr_row ')'
  112     | . TK_FLOAT
  113     | . TK_PI
  114     | . TK_INFINITY
  115     | . TK_INT_CST
  116     | . interval
  117     | . TK_INF '(' expr ')'
  118     | . TK_MID '(' expr ')'
  119     | . TK_SUP '(' expr ')'
  120     | . TK_DIFF '(' expr_row ')'
  121     | . TK_UNARY_OP '(' expr ')'
  122     | . TK_BINARY_OP '(' expr ',' expr ')'

    TK_CONSTANT         shift, and go to state 7
    TK_NEW_SYMBOL       shift, and go to state 8
    TK_FUNC_SYMBOL      shift, and go to state 9
    TK_EXPR_TMP_SYMBOL  shift, and go to state 10
    TK_ENTITY           shift, and go to state 11
    TK_ITERATOR         shift, and go to state 12
    TK_UNARY_OP         shift, and go to state 13
    TK_BINARY_OP        shift, and go to state 14
    TK_INT_CST          shift, and go to state 15
    TK_FLOAT            shift, and go to state 16
    TK_PI               shift, and go to state 17
    TK_INFINITY         shift, and go to state 18
    TK_DIFF             shift, and go to state 19
    TK_MIN              shift, and go to state 20
    TK_MAX              shift, and go to state 21
    TK_INF              shift, and go to state 22
    TK_MID              shift, and go to state 23
    TK_SUP              shift, and go to state 24
    TK_SIGN             shift, and go to state 25
    TK_ABS              shift, and go to state 26
    TK_SUM              shift, and go to state 27
    TK_SQRT             shift, and go to state 28
    TK_SQR              shift, and go to state 29
    TK_POW              shift, and go to state 30
    TK_EXPO             shift, and go to state 31
    TK_LOG              shift, and go to state 32
    TK_COS              shift, and go to state 33
    TK_SIN              shift, and go to state 34
    TK_TAN              shift, and go to state 35
    TK_ACOS             shift, and go to state 36
    TK_ASIN             shift, and go to state 37
    TK_ATAN             shift, and go to state 38
    TK_ATAN2            shift, and go to state 39
    TK_COSH             shift, and go to state 40
    TK_SINH             shift, and go to state 41
    TK_TANH             shift, and go to state 42
    TK_ACOSH            shift, and go to state 43
    TK_ASINH            shift, and go to state 44
    TK_ATANH            shift, and go to state 45
    TK_FLOOR            shift, and go to state 46
    TK_CEIL             shift, and go to state 47
    TK_INTEGER          shift, and go to state 48
    TK_CHI              shift, and go to state 49
    TK_FOR              shift, and go to state 50
    '<'                 shift, and go to state 51
    '+'                 shift, and go to state 52
    '-'                 shift, and go to state 53
    '['                 shift, and go to state 54
    '('                 shift, and go to state 55

    choco_ctr      go to state 56
    interval       go to state 57
    ctr_blk_list   go to state 58
    ctr_blk_list1  go to state 59
    ctr_blk_list2  go to state 60
    ctr_loop       go to state 61
    ctr            go to state 62
    expr           go to state 63


State 4

    0 $accept: program $end .

    $default  accept


State 5

    9 decl_opt_cst: TK_CONST .  [$end, TK_VARS, TK_FUNCTION]
   10             | TK_CONST . decl_cst_list ';'
   11 decl_cst_list: . decl_cst
   12              | . decl_cst_list ';' decl_cst
   13 decl_cst: . TK_NEW_SYMBOL dimension equ_or_in expr
   14         | . '*' TK_NEW_SYMBOL dimension equ_or_in expr

    TK_NEW_SYMBOL  shift, and go to state 64
    '*'            shift, and go to state 65

    $default  reduce using rule 9 (decl_opt_cst)

    decl_cst_list  go to state 66
    decl_cst       go to state 67


State 6

    2 program: $@1 decl_opt_cst . decl_opt_fncs system_or_func
   26 decl_opt_fncs: . decl_opt_fncs function
   27              | . %empty

    $default  reduce using rule 27 (decl_opt_fncs)

    decl_opt_fncs  go to state 68


State 7

  109 expr: TK_CONSTANT .

    $default  reduce using rule 109 (expr)


State 8

   63 ctr: TK_NEW_SYMBOL . TK_EQU expr

    TK_EQU  shift, and go to state 69


State 9

  110 expr: TK_FUNC_SYMBOL . '(' expr ')'
  111     | TK_FUNC_SYMBOL . '(' expr_row ')'

    '('  shift, and go to state 70


State 10

  108 expr: TK_EXPR_TMP_SYMBOL .

    $default  reduce using rule 108 (expr)


State 11

  106 expr: TK_ENTITY .

    $default  reduce using rule 106 (expr)


State 12

  107 expr: TK_ITERATOR .

    $default  reduce using rule 107 (expr)


State 13

  121 expr: TK_UNARY_OP . '(' expr ')'

    '('  shift, and go to state 71


State 14

  122 expr: TK_BINARY_OP . '(' expr ',' expr ')'

    '('  shift, and go to state 72


State 15

  115 expr: TK_INT_CST .

    $default  reduce using rule 115 (expr)


State 16

  112 expr: TK_FLOAT .

    $default  reduce using rule 112 (expr)


State 17

  113 expr: TK_PI .

    $default  reduce using rule 113 (expr)


State 18

  114 expr: TK_INFINITY .

    $default  reduce using rule 114 (expr)


State 19

  120 expr: TK_DIFF . '(' expr_row ')'

    '('  shift, and go to state 73


State 20

   69 expr: TK_MIN . '(' expr_row ')'

    '('  shift, and go to state 74


State 21

   68 expr: TK_MAX . '(' expr_row ')'

    '('  shift, and go to state 75


State 22

  117 expr: TK_INF . '(' expr ')'

    '('  shift, and go to state 76


State 23

  118 expr: TK_MID . '(' expr ')'

    '('  shift, and go to state 77


State 24

  119 expr: TK_SUP . '(' expr ')'

    '('  shift, and go to state 78


State 25

   75 expr: TK_SIGN . '(' expr ')'

    '('  shift, and go to state 79


State 26

   74 expr: TK_ABS . '(' expr ')'

    '('  shift, and go to state 80


State 27

   71 expr: TK_SUM . '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'

    '('  shift, and go to state 81


State 28

   77 expr: TK_SQRT . '(' expr ')'

    '('  shift, and go to state 82


State 29

   78 expr: TK_SQR . '(' expr ')'

    '('  shift, and go to state 83


State 30

   79 expr: TK_POW . '(' expr ',' expr ')'

    '('  shift, and go to state 84


State 31

   80 expr: TK_EXPO . '(' expr ')'

    '('  shift, and go to state 85


State 32

   81 expr: TK_LOG . '(' expr ')'

    '('  shift, and go to state 86


State 33

   82 expr: TK_COS . '(' expr ')'

    '('  shift, and go to state 87


State 34

   83 expr: TK_SIN . '(' expr ')'

    '('  shift, and go to state 88


State 35

   84 expr: TK_TAN . '(' expr ')'

    '('  shift, and go to state 89


State 36

   85 expr: TK_ACOS . '(' expr ')'

    '('  shift, and go to state 90


State 37

   86 expr: TK_ASIN . '(' expr ')'

    '('  shift, and go to state 91


State 38

   87 expr: TK_ATAN . '(' expr ')'

    '('  shift, and go to state 92


State 39

   72 expr: TK_ATAN2 . '(' expr ',' expr ')'

    '('  shift, and go to state 93


State 40

   88 expr: TK_COSH . '(' expr ')'

    '('  shift, and go to state 94


State 41

   89 expr: TK_SINH . '(' expr ')'

    '('  shift, and go to state 95


State 42

   90 expr: TK_TANH . '(' expr ')'

    '('  shift, and go to state 96


State 43

   91 expr: TK_ACOSH . '(' expr ')'

    '('  shift, and go to state 97


State 44

   92 expr: TK_ASINH . '(' expr ')'

    '('  shift, and go to state 98


State 45

   93 expr: TK_ATANH . '(' expr ')'

    '('  shift, and go to state 99


State 46

   94 expr: TK_FLOOR . '(' expr ')'

    '('  shift, and go to state 100


State 47

   95 expr: TK_CEIL . '(' expr ')'

    '('  shift, and go to state 101


State 48

   61 ctr: TK_INTEGER . '(' expr ')'

    '('  shift, and go to state 102


State 49

   96 expr: TK_CHI . '(' expr ',' expr ',' expr ')'

    '('  shift, and go to state 103


State 50

   54 ctr_loop: TK_FOR . TK_NEW_SYMBOL TK_EQU expr ':' expr ';' $@5 ctr_blk_list TK_END

    TK_NEW_SYMBOL  shift, and go to state 104


State 51

   25 interval: . '[' expr ',' expr ']'
   64 expr: . expr '+' expr
   65     | . expr '*' expr
   66     | . expr '-' expr
   67     | . expr '/' expr
   68     | . TK_MAX '(' expr_row ')'
   69     | . TK_MIN '(' expr_row ')'
   71     | . TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   72     | . TK_ATAN2 '(' expr ',' expr ')'
   73     | . '-' expr
   74     | . TK_ABS '(' expr ')'
   75     | . TK_SIGN '(' expr ')'
   76     | . expr '\''
   77     | . TK_SQRT '(' expr ')'
   78     | . TK_SQR '(' expr ')'
   79     | . TK_POW '(' expr ',' expr ')'
   80     | . TK_EXPO '(' expr ')'
   81     | . TK_LOG '(' expr ')'
   82     | . TK_COS '(' expr ')'
   83     | . TK_SIN '(' expr ')'
   84     | . TK_TAN '(' expr ')'
   85     | . TK_ACOS '(' expr ')'
   86     | . TK_ASIN '(' expr ')'
   87     | . TK_ATAN '(' expr ')'
   88     | . TK_COSH '(' expr ')'
   89     | . TK_SINH '(' expr ')'
   90     | . TK_TANH '(' expr ')'
   91     | . TK_ACOSH '(' expr ')'
   92     | . TK_ASINH '(' expr ')'
   93     | . TK_ATANH '(' expr ')'
   94     | . TK_FLOOR '(' expr ')'
   95     | . TK_CEIL '(' expr ')'
   96     | . TK_CHI '(' expr ',' expr ',' expr ')'
   97     | . '+' expr
   98     | . '(' expr ')'
   99     | . '<' expr ',' expr '>'
   99     | '<' . expr ',' expr '>'
  100     | . expr '^' expr
  101     | . expr '[' expr_index ']'
  102     | . expr '(' expr_index ')'
  103     | . expr '(' expr_index ',' expr_index ')'
  104     | . '(' expr_row ')'
  105     | . '(' expr_col ')'
  106     | . TK_ENTITY
  107     | . TK_ITERATOR
  108     | . TK_EXPR_TMP_SYMBOL
  109     | . TK_CONSTANT
  110     | . TK_FUNC_SYMBOL '(' expr ')'
  111     | . TK_FUNC_SYMBOL '(' expr_row ')'
  112     | . TK_FLOAT
  113     | . TK_PI
  114     | . TK_INFINITY
  115     | . TK_INT_CST
  116     | . interval
  117     | . TK_INF '(' expr ')'
  118     | . TK_MID '(' expr ')'
  119     | . TK_SUP '(' expr ')'
  120     | . TK_DIFF '(' expr_row ')'
  121     | . TK_UNARY_OP '(' expr ')'
  122     | . TK_BINARY_OP '(' expr ',' expr ')'

    TK_CONSTANT         shift, and go to state 7
    TK_FUNC_SYMBOL      shift, and go to state 9
    TK_EXPR_TMP_SYMBOL  shift, and go to state 10
    TK_ENTITY           shift, and go to state 11
    TK_ITERATOR         shift, and go to state 12
    TK_UNARY_OP         shift, and go to state 13
    TK_BINARY_OP        shift, and go to state 14
    TK_INT_CST          shift, and go to state 15
    TK_FLOAT            shift, and go to state 16
    TK_PI               shift, and go to state 17
    TK_INFINITY         shift, and go to state 18
    TK_DIFF             shift, and go to state 19
    TK_MIN              shift, and go to state 20
    TK_MAX              shift, and go to state 21
    TK_INF              shift, and go to state 22
    TK_MID              shift, and go to state 23
    TK_SUP              shift, and go to state 24
    TK_SIGN             shift, and go to state 25
    TK_ABS              shift, and go to state 26
    TK_SUM              shift, and go to state 27
    TK_SQRT             shift, and go to state 28
    TK_SQR              shift, and go to state 29
    TK_POW              shift, and go to state 30
    TK_EXPO             shift, and go to state 31
    TK_LOG              shift, and go to state 32
    TK_COS              shift, and go to state 33
    TK_SIN              shift, and go to state 34
    TK_TAN              shift, and go to state 35
    TK_ACOS             shift, and go to state 36
    TK_ASIN             shift, and go to state 37
    TK_ATAN             shift, and go to state 38
    TK_ATAN2            shift, and go to state 39
    TK_COSH             shift, and go to state 40
    TK_SINH             shift, and go to state 41
    TK_TANH             shift, and go to state 42
    TK_ACOSH            shift, and go to state 43
    TK_ASINH            shift, and go to state 44
    TK_ATANH            shift, and go to state 45
    TK_FLOOR            shift, and go to state 46
    TK_CEIL             shift, and go to state 47
    TK_CHI              shift, and go to state 49
    '<'                 shift, and go to state 51
    '+'                 shift, and go to state 52
    '-'                 shift, and go to state 53
    '['                 shift, and go to state 54
    '('                 shift, and go to state 105

    interval  go to state 57
    expr      go to state 106


State 52

   25 interval: . '[' expr ',' expr ']'
   64 expr: . expr '+' expr
   65     | . expr '*' expr
   66     | . expr '-' expr
   67     | . expr '/' expr
   68     | . TK_MAX '(' expr_row ')'
   69     | . TK_MIN '(' expr_row ')'
   71     | . TK_SUM '(' TK_NEW_SYMBOL TK_EQU expr ':' expr ',' $@6 expr ')'
   72     | . TK_ATAN2 '(' expr ',' expr ')'
   73     | . '-' expr
   74     | . TK_ABS '(' expr ')'
   75     | . TK_SIGN '(' expr ')'
   76     | . expr '\''
   77     | . TK_SQRT '(' expr ')'
   78     | . TK_SQR '(' expr ')'
   79     | . TK_POW '(' expr ',' expr ')'
   80     | . TK_EXPO '(' expr ')'
   81     | . TK_LOG '(' expr ')'
   82     | . TK_COS '(' expr ')'
   83     | . TK_SIN '(' expr ')'
   84     | . TK_TAN '(' expr ')'
   85     | . TK_ACOS '(' expr ')'
   86     | . TK_ASIN '(' expr ')'
   87     | . TK_ATAN '(' expr ')'
   88     | . TK_COSH '(' expr ')'
   89     | . TK_SINH '(' expr ')'
   90     | . TK_TANH '(' expr ')'
   91     | . TK_ACOSH '(' expr ')'
   92     | . TK_ASINH '(' expr ')'
   93     | . TK_ATANH '(' expr ')'
   94     | . TK_FLOOR '(' expr ')'
   95     | . TK_CEIL '(' expr ')'
   96     | . TK_CHI '(' expr ',' expr ',' expr ')'
   97     | . '+' expr
   97     | '+' . expr
   98     | . '(' expr ')'
   99     | . '<' expr ',' expr '>'
  100     | . expr '^' expr
  101     | . expr '[' expr_index ']'
  102     | . expr '(' expr_index ')'
  103     | . expr '(' expr_index ',' expr_index ')'
  104     | . '(' expr_row ')'
  105     | . '(' expr_col ')'
  106     | . TK_ENTITY
  107     | . TK_ITERATOR
  108     | . TK_EXPR_TMP_SYMBOL
  109     | . TK_CONSTANT
  110     | . TK_FUNC_SYMBOL '(' expr ')'
  111     | . TK_FUNC_SYMBOL '(' expr_row ')'
  112     | . TK_FLOAT
  113     | . TK_PI
  114     | . TK_INFINITY
  115     | . TK_INT_CST
  116     | . interval
  117     | . TK_INF '(' expr ')'
  118     | . TK_MID '(' expr ')'
  119     | . TK_SUP '(' expr ')'
  120     | . TK_DIFF '(' expr_row ')'
  121     | . TK_UNARY_OP '(' expr ')'
  122     | . TK_BINARY_OP '(' expr ',' expr ')'
